shrinking header, partial fix for overflow, and right aligned

--- a/react/src/Start/startstyle.css
+++ b/react/src/Start/startstyle.css
@@ -1,3 +1,9 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+}
+
 .startbase-container {
     width: 100%;
     display: flex;
@@ -28,7 +34,7 @@
     font-weight: 600;
     font-style: italic;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    box-shadow: 0px 0px 12px 2px rgba(15, 15, 15, 0.2);
+    /* box-shadow: 0px 0px 12px 2px rgba(15, 15, 15, 0.2); */
   } 
 .startheader a {
     float: left;
@@ -42,7 +48,7 @@
     
 }
 .startheader img {
-    width: 13em;
+    width: 10em;
     float: left;
     margin-left: 2em;
 }
